src/styles/elements/_fragment.css
@layer components {
    .fragment {
        --fragment-intro-title-margin-bottom: 0;
        --fragment-intro-subtitle-margin: 0;
        --fragment-intro-description-margin: var(--spacing-l) auto 0;
        --fragment-intro-description-max-width: var(--content-max-width);
        --fragment-intro-logo-display: block;
        --fragment-intro-logo-height: auto;
        --fragment-intro-logo-width: 4rem;
        --fragment-intro-logo-margin: 0 auto;
        --fragment-intro-logo-object-fit: contain;

        --fragment-map-width: 100%;
        --fragment-map-height: auto;
        --fragment-map-aspect-ratio: var(--aspect-ratio-default);
        --fragment-map-position: relative;
        --fragment-map-border-radius: var(--border-radius-default);

        --fragment-map-image-width: 100%;
        --fragment-map-image-height: auto;
        --fragment-map-image-aspect-ratio: var(--aspect-ratio-default);
        --fragment-map-image-position: relative;
        --fragment-map-image-border-radius: var(--border-radius-default);
    }

    .fragment[map-aspect-ratio="default"] {
        --fragment-map-aspect-ratio: var(--aspect-ratio-default);
    }

    .fragment[map-aspect-ratio="3-1"] {
        --fragment-map-aspect-ratio: var(--aspect-ratio-3-1);
    }

    .fragment__intro-logo {
        display: var(--fragment-intro-logo-display);
        height: var(--fragment-intro-logo-height);
        width: var(--fragment-intro-logo-width);
        margin: var(--fragment-intro-logo-margin);
        object-fit: var(--fragment-intro-logo-object-fit);
    }

    .fragment__intro-title {
        margin-bottom: var(--fragment-intro-title-margin-bottom);
    }

    .fragment__intro-logo + .fragment__intro-title {
        --fragment-intro-title-margin-top: var(--spacing-normal);

        margin-top: var(--fragment-intro-title-margin-top);
    }

    .fragment__intro-subtitle {
        margin: var(--fragment-intro-title-margin-bottom);
    }

    .fragment__intro-description {
        margin: var(--fragment-intro-description-margin);
        max-width: var(--fragment-intro-description-max-width);
    }

    .fragment__map {
        width: var(--fragment-map-width);
        height: var(--fragment-map-height);
        aspect-ratio: var(--fragment-map-aspect-ratio);
        position: var(--fragment-map-position);
        border-radius: var(--fragment-map-border-radius);
    }

    .fragment__map-image {
        width: var(--fragment-map-image-width);
        height: var(--fragment-map-image-height);
        aspect-ratio: var(--fragment-map-image-aspect-ratio);
        position: var(--fragment-map-image-position);
        border-radius: var(--fragment-map-image-border-radius);
    }

    @container (min-width: 840px) {
        .fragment {
            --fragment-intro-logo-width: 6rem;
        }
    }
}

